= ActiveMerchant CHANGELOG

* Move generate_unique_id to its own module [cody]
* Update Viaklix to add support for avs and cvv data. remove test_result_from_cc_number. Truncate fields to avoid failure [cody]
* Update PSL Card Gateway to add support for avs and cvv data. remove test_result_from_cc_number. [cody]
* Update PlugNPayGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Update PaymentExpressGateway to remove test_result_from_cc_number. [cody]
* Update PaySecure to remove test_result_from_cc_number. [cody]
* Update NetbillingGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Replace all usage of :address with :billing_address in test cases [cody]
* Remove sensitive data from NetRegistryGateway responses. Refactor gateway and tests. Remove test_result_from_cc_number. [cody]
* Update VerifiGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Small refactoring of UsaEpayGateway [cody]
* Update UsaEpayGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Update TrustCommerce docs now that the gateway falls back to SSL post when tclink isn't available [cody]
* Change ARB to use correct :address1 key for addresses [cody]
* No need for specialized recurring response for Authorize.net recurring billing [cody]
* Update TransFirst to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Maintain backwards compatibility with :address option for now in the Payflow gateways [cody]
* Remove test_result_from_cc_number from SecurePayTech. Improve unit test coverage [cody]
* Fix email option in PayflowGateway. Remove support for :address option. :billing_address and :shipping_address must now be passed in separately. [cody]
* Make Bogus gateway's credit() method behave like capture [cody]
* Add update and delete methods to update and delete records stored in the vault. [benjamin.curtis]